--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -21,4 +21,11 @@
       width: 250px;
       height: 300px;
   }
-  
+
+  .card-text {
+    white-space: nowrap; 
+    width: 150px;
+    height: 100px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
