--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 
 .App {
-  text-align: center;
-  margin-top: 2rem;
+  /* text-align: center;
+  margin-top: 2rem; */
+}
+.row {
+  margin-top: 5px;
+  margin-bottom: 0px !important;;
 }
 
 .App-logo {
