--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -1,8 +1,10 @@
-.card-list {
+/* .card-list {
     width: 85vw;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+    margin-top: 2rem;
+    margin-bottom: 5rem 
   }
-  
+   */
