--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,24 +1,7 @@
-.card-container {
-    display: flex;
-    flex-direction: column;
-    background-color: #95dada;
-    border: 1px solid grey;
-    border-radius: 5px;
-    padding: 25px;
-    cursor: pointer;
-    -moz-osx-font-smoothing: grayscale;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
-    align-items: center;
-  }
-  
-  .card-container:hover {
-    transform: scale(1.05);
-  }
-
+.card-image {
+  text-align: -webkit-center;
+}
   .card-img {
-      width: 250px;
+      width: 245px !important;
       height: 300px;
   }
-  
