--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -1,10 +1,7 @@
-/* .card-list {
-    width: 85vw;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin-top: 2rem;
-    margin-bottom: 5rem 
-  }
-   */
+section {
+  width: 69%;
+  float: right;
+  padding: 0.625rem 1.25rem;
+  margin: 0 1% 0 0;
+  text-align: center;
+}
