--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,3 +1,9 @@
+article {
+  width: 50%;
+  float: left;
+  display: inline;
+  padding: 0 1.25rem 1.25rem 1.25rem;
+}
 .card-image {
   text-align: -webkit-center;
 }
