--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -1,7 +1,18 @@
-section {
+/*Version 1  */
+/* section {
   width: 69%;
   float: right;
   padding: 0.625rem 1.25rem;
   margin: 0 1% 0 0;
   text-align: center;
+} */
+
+/* ------------------------------------------------------------------------ */
+.books{
+  padding: 2rem;
+}
+article {
+  display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1rem;
 }
