--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   -moz-box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
   /* text-align: center;
   margin-top: 2rem; */
@@ -39,7 +43,7 @@
   color: #61dafb;
 }
 
-@media (min-width: 68rem) {
+/* @media (min-width: 68rem) {
   article:nth-of-type(3n) {
     margin-right: 0;
   }
@@ -89,7 +93,7 @@
     padding: 0.625rem 1.25rem;
     margin: 0 0 0 0;
   }
-}
+} */
 
 
 @keyframes App-logo-spin {
