--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -19,10 +19,10 @@
 } */
 /*------------------------------------------------------------------------------------------------------------------------*/
 
-
 .books > article > .card {
   border: 1px solid #E2E2E2;
   border-radius: .5rem;
+  width: 100%;
 }
 
 .card > figure {
